[package]
name = "ssr"
version = "0.2.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
alternate_screen_wrapper = { version = "0.1.1", features = ["crossterm"]}
ratatui = "0.28.1"

ratatui_inputs = { version = "0.1.3", features = ["fast_select_with_enter"] }
s_text_input_f = "0.3"
s_text_input_f-parser = "0.1"
anyhow = "1.0.89"

serde_json = "1"
ssr-core = "0.27"
ssr-facade = "0.5"
ssr-algorithms = "0.5"
