[package]
name = "ssr"
version = "0.5.1"
edition = "2021"

[dependencies]
crossterm = "0.28"
alternate_screen_wrapper = { version = "0.1", features = ["crossterm"]}
ratatui = "0.29"

# ratatui_inputs = { version = "0.2", features = ["fast_select_with_enter"] }
s_text_input_f = "0.3"
s_text_input_f-parser = "0.2"
anyhow = "1"

serde_json = "1"
clap = { version = "4.5", features = ["derive", "string"] }

ssr-core = "0.38"
ssr-algorithms = "0.8"
ssr-facade = "0.10"
# ssr-core = { path = "../ssr-core/" }
# ssr-algorithms = { path = "../ssr-algorithms/" }
# ssr-facade = { path = "../ssr-facade/" }

[dependencies.ratatui_inputs]
version = "0.2"
features = ["fast_select_with_enter"]
